--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<!-- <router-outlet> </router-outlet> -->
-<p> is it working?? </p> 
+<router-outlet> </router-outlet>
+<!-- <p> is it working?? </p>  -->
