--- a/src/lib/wall/wall.component.html
+++ b/src/lib/wall/wall.component.html
@@ -1,5 +1,5 @@
 
 <div class = "back">
-	<img src="/assets/wall/images/wall1.jpg" class = "wall">
+	<button class = "btn" (click)="viewCard()" (mouseover)="mouseOver()" style = "top: {{y1}}px; left: {{x1}}px"> About </button> 
 </div>
 
