--- a/src/lib/wall/wall.component.html
+++ b/src/lib/wall/wall.component.html
@@ -1,5 +1,6 @@
 
 <div class = "back">
-	<button class = "btn" (click)="viewCard()" (mouseover)="mouseOver()" style = "top: {{y1}}px; left: {{x1}}px"> About </button> 
+	<button class = "btn" (click)="viewCard()" (mouseover)="mouseOver()" style = "top:{{y1}}px; left:{{x1}}px" > About </button> 
+	<!-- <button class = "btn" draggable = "true"> About </button>  -->
 </div>
 
