--- a/src/lib/wall/wall.component.scss
+++ b/src/lib/wall/wall.component.scss
@@ -5,16 +5,84 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	background-image: url("/assets/wall/images/wall1.jpg");
+	z-index: 0;
+	// background-image: url("/assets/wall/images/wall1.jpg");
+	background-color: lightblue;
 	
 
 	.btn{
 		background-color: red;
 		position: absolute;
-		// top: 5%;
-		// left: 95%;
+		height: 40px;
+		width: 80px;
+		z-index: 1;
 		cursor: pointer;
 	}
+
+	.card-container{
+		z-index: 3;
+		height: 800px;
+		width: 1200px;
+		position: absolute;
+		display: flex;
+		flex-direction: column;
+		background-color: aquamarine;
+		border-radius: 20px;
+		box-shadow: 0 10px 25px -5px rgb(0 0 0 / 0.2), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+		visibility: visible;
+		transform: translateY(20px);
+		transition: all 100ms ease-out;
+
+		&.show-card{
+			visibility: hidden;
+			transform: translateY(0);
+		}
+
+		.menu-bar{
+			width: 100%;
+			height: 4%;
+			background-color: lightgoldenrodyellow;
+			border-radius: 20px 20px 0px 0px;
+			border: 3px solid black;
+			display: flex;
+			flex-direction: row;
+			align-items: center;
+
+			.first{
+				height: 15px;
+				width: 15px;
+				background-color: lightcoral;
+				border-radius: 10px 10px 10px 10px;
+				border: 3px solid black;
+				margin-left: 10px;
+			}
+			.second{
+				height: 15px;
+				width: 15px;
+				background-color: white;
+				border-radius: 10px 10px 10px 10px;
+				border: 3px solid black;
+				margin-left: 10px;
+			}
+			.third{
+				height: 15px;
+				width: 15px;
+				background-color: white;
+				border-radius: 10px 10px 10px 10px;
+				border: 3px solid black;
+				margin-left: 10px;
+			}
+		}
+
+		.content-box{
+			background-color: lightgoldenrodyellow;
+			width: 100%;
+			height: 96%;
+			border-radius: 0px 0px 20px 20px;
+			border: 3px solid black;
+		}
+	}
+
 
 }
 
