--- a/src/lib/wall/wall.component.html
+++ b/src/lib/wall/wall.component.html
@@ -1,9 +1,9 @@
 
 <div class = "back">
-	<button class = "btn" (click)="flipCard()" (mouseover)="mouseOver()"  style = "top: {{y1}}px; left: {{x1}}px" > About </button> 
+	<button class = "btn" (click)="flipCard()" (mouseover)="mouseOver()"  (mouseout)="mouseOut()" style = "top: {{y1}}px; left: {{x1}}px" > About </button> 
 
 	<div class = "card-container" [class.show-card] = "cardVisible" style = "top: {{cardY1}}px; left: {{cardX1}}px">
-		<div class="menu-bar" (mouseover)="mouseOverMenubar()">
+		<div class="menu-bar" (mouseover)="mouseOverMenubar()" (mouseout) = "mouseOutMenubar()">
 			<div class="first" (click)="flipCard()" ></div>
 			<div class="second" (click)="flipCard()"></div>
 			<div class="third"></div>
