--- a/src/lib/wall/wall.component.scss
+++ b/src/lib/wall/wall.component.scss
@@ -30,17 +30,18 @@
 		border-radius: 20px;
 		box-shadow: 0 10px 25px -5px rgb(0 0 0 / 0.2), 0 8px 10px -6px rgb(0 0 0 / 0.1);
 		visibility: visible;
-		transform: translateY(20px);
-		transition: all 100ms ease-out;
+		// transform: translateY(20px);
+		// transition: all 100ms ease-out;
 
 		&.show-card{
 			visibility: hidden;
-			transform: translateY(0);
+			// transform: translateY(0);
 		}
 
 		.menu-bar{
 			width: 100%;
 			height: 4%;
+			cursor: pointer;
 			background-color: lightgoldenrodyellow;
 			border-radius: 20px 20px 0px 0px;
 			border: 3px solid black;
