get request is working

--- a/src/lib/projects/projects.component.html
+++ b/src/lib/projects/projects.component.html
@@ -10,7 +10,7 @@
 			<div class="third"></div>
 		</div>	
 		<div class="content-box">
-
+			<div [innerHtml]="data"></div>
 		</div>
 	</div>
 </div>
