card view added

--- a/src/lib/wall/wall.component.html
+++ b/src/lib/wall/wall.component.html
@@ -15,12 +15,20 @@
 			<p> I am a full stack software developer. currently, persuing a undergrad degree at National Institute of Technology Raipur.</p>
 			<div class="find">
 				<p> Find me on </p> 
-				<img src="assets/images/buttons/linkedin.png" class = "logo">
-				<img src="assets/images/buttons/gmail.png" class = "logo">
-				<img src="assets/images/buttons/git.png" class = "logo">
+				<a href="https://linkedin.com/in/gagan-gaurav">
+					<img src="assets/images/buttons/linkedin.png" class = "logo">
+				</a>
+				<a href="https://mail.google.com/mail/?view=cm&fs=1&to=iamgagangaurav@gmail.com">
+					<img src="assets/images/buttons/gmail.png" class = "logo">
+				</a>
+				<a href="https://github.com/gagan-gaurav">
+					<img src="assets/images/buttons/git.png" class = "logo">
+				</a>
 				<div class="res">
 					<p> Resume </p>
-					<img src="assets/images/buttons/doc.png" class = "logo">
+					<a href="https://docs.google.com/document/d/1CaoFqU-tZwj7LNEjBxguaU8XPmAwZQbI9Sjfh1ohzYU/edit?usp=sharing">
+						<img src="assets/images/buttons/doc.png" class = "logo">
+					</a>
 				</div>
 			</div>
 		</div>
