--- a/src/lib/projects/projects.component.scss
+++ b/src/lib/projects/projects.component.scss
@@ -28,8 +28,8 @@
 
 	.card-container{
 		z-index: 3;
-		height: 800px;
-		width: 1400px;
+		height: 900px;
+		width: 1500px;
 		position: absolute;
 		display: flex;
 		flex-direction: column;
@@ -52,7 +52,6 @@
 			background-color: whitesmoke;
 			border-radius: 20px 20px 0px 0px;
 			border: 3px solid black;
-			border-bottom: 0px;
 			display: flex;
 			flex-direction: row;
 			align-items: center;
@@ -87,10 +86,95 @@
 			background-color: whitesmoke;
 			width: 100%;
 			height: 96%;
-			border-radius: 0px 0px 20px 20px;
+			// border-radius: 0px 0px 20px 20px;
 			border: 3px solid black;
+			border-bottom: 0px;
+			border-top: 0px;
+			display: flex;
+			align-items: center;
+			flex-direction: column;
+			font-family:'Courier New', Courier, monospace;
+			overflow-y: scroll;
+
+			.heading{
+				display: flex;
+				flex-direction: row;
+				height: 80px;
+				width: 90%;
+				min-height: 80px;
+			}
+
+			.box{
+				background-color: lightpink;
+				width: 90%;
+				border-radius: 10px;
+				// height:max-content;
+				margin-top: 10px;
+				padding: 20px; 
+				box-sizing: border-box;
+				// display: flex;
+				// flex-direction: column;
+				
+				p{
+					margin: 5px;
+				}
+
+				.time{
+					width: 100%;
+					// height: 20px;
+					// background-color: red;
+					font-size: 14px;
+					margin: 0px;
+				}
+
+				.topic{
+					width: 100%;
+					// height: 40px;
+					// font-weight: bold;
+					font-size: 22px;
+					// background-color: lightgreen;
+				}
+
+				.stack{
+					width: 100%;
+					// height: 30px;
+					font-style: italic;
+					font-size: 16px;
+					// background-color: lightblue;
+				}
+			}
+		}
+
+		.footer{
+			width: 100%;
+			height: 10px;
+			background-color: whitesmoke;
+			border: 3px solid black;
+			border-radius: 0px 0px 20px 20px;
+			border-top: 0px;
 		}
 	}
+	::-webkit-scrollbar {
+		width: 12px;
+	}
+	
+	/* Track */
+	::-webkit-scrollbar-track {
+		// -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+		-webkit-border-radius: 10px;
+		border-radius: 10px;
+	}
+	
+	/* Handle */
+	::-webkit-scrollbar-thumb {
+		-webkit-border-radius: 10px;
+		border-radius: 10px;
+		background: lightsteelblue; 
+		// -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+	}
+	// ::-webkit-scrollbar-thumb:window-inactive {
+	// 	background: lightblue; 
+	// }
 
 
 }
