--- a/src/lib/wall/wall.component.scss
+++ b/src/lib/wall/wall.component.scss
@@ -96,7 +96,7 @@
 			cursor: pointer;
 			background-color: whitesmoke;
 			border-radius: 20px 20px 0px 0px;
-			border: 3px solid black;
+			border: 2px solid black;
 			border-bottom: 0px;
 			display: flex;
 			flex-direction: row;
@@ -107,7 +107,7 @@
 				width: 15px;
 				background-color: lightcoral;
 				border-radius: 10px 10px 10px 10px;
-				border: 3px solid black;
+				border: 2px solid black;
 				margin-left: 10px;
 			}
 			.second{
@@ -115,7 +115,7 @@
 				width: 15px;
 				background-color: white;
 				border-radius: 10px 10px 10px 10px;
-				border: 3px solid black;
+				border: 2px solid black;
 				margin-left: 10px;
 			}
 			.third{
@@ -123,7 +123,7 @@
 				width: 15px;
 				background-color: white;
 				border-radius: 10px 10px 10px 10px;
-				border: 3px solid black;
+				border: 2px solid black;
 				margin-left: 10px;
 			}
 		}
@@ -133,28 +133,41 @@
 			width: 100%;
 			height: 100%;
 			border-radius: 0px 0px 20px 20px;
-			border: 3px solid black;
+			border: 2px solid black;
 			// font-family: 'Courier New', Courier, monospace;
-			font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+			// font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+			// font-family: Jost,sans-serif;
+			display: flex;
+			flex-direction: column;
+			justify-content: space-around;
 			// font-weight: bold;
 			// padding: 15px;
 			// box-sizing: border-box;
 
 			h1{
-				padding: 12px;
+				padding: 12px 24px;
+				margin: 0px;
 			}
 
 			p{
-				padding: 12px;	
-				font-size: 16px;
+				padding: 12px 24px;	
+				margin: 0px;
+				font-size: 15px;
+				font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 			}
 
 			.find{
+				padding: 0px 24px;
 				display: flex;
 				align-items: center;
+				box-sizing: border-box;
 				// background-color: blue;
 				width: 100%;
 				height: 60px;
+
+				p{
+					padding: 12px 0px;
+				}
 
 				.logo{
 					height: 32px;
