blogs component changed

--- a/src/lib/blogs/blogs.component.html
+++ b/src/lib/blogs/blogs.component.html
@@ -1,1 +1,24 @@
-<button (click)="test()"> test </button>
+<div class="blogs-window">
+	<div class="menu-bar">
+		<div class="heading">Blogs</div>
+		<div class="close"></div>
+	</div>
+	<div class="search">
+		<input type="text" placeholder="Search">
+		<div class="search-btn"></div>
+	</div>
+	<div class="blogs-container">
+		<div class="nav-menu">
+			<button class="trending">
+			</button>
+			<button class="myblogs">
+			</button>
+			<button class="addblogs">
+			</button>
+		</div>
+		<div class="blogs">
+
+		</div>
+	</div>
+	
+</div>
