--- a/src/lib/blogs/blogs.component.scss
+++ b/src/lib/blogs/blogs.component.scss
@@ -49,8 +49,15 @@
 			width: 24px;
 			margin-left: 8px;
 			border-radius: 24px;
-			border: solid black;
-			background-color: green;
+			// border: solid 2px black;
+			background-color: lightgreen;
+			box-shadow: 4px 4px;
+			cursor: pointer;
+		}
+		
+		.search-btn:active{
+			background-color: rgb(78, 151, 78);
+			box-shadow: 2px 2px;
 		}
 	}
 
@@ -104,7 +111,7 @@
 			}
 	
 			.addblogs-container{
-				background-color: lightblue;
+				background-color: lightcyan;
 				display: flex;
 				flex-direction: column;
 				justify-content: space-evenly;
@@ -119,21 +126,29 @@
 				box-sizing: border-box;
 
 				input{
-					height: 24px;
+					height: 36px ;
+					font-size: 32px;
+					padding: 4px;
 					border-radius: 4px;
 					border: solid 2px black;
 				}
 
-				button{
+				.btn{
 					background-color: lightgreen;
 					height: 32px;
-					width: 72px;
-					border: solid 2px black;
+					width: 84px;
+					border: 0px;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					box-shadow: 4px 4px;
 					border-radius: 24px;
+					cursor: pointer;
 				}
 
-				button:hover{
-					background-color: darkgreen;
+				.btn:active{
+					background-color: #38a338;
+					box-shadow: 2px 2px;
 				}
 			}
 		}
